# code2llm

./: .gitignore  CHANGELOG.md  Makefile  README.md  REFACTORING_PLAN.md  ROADMAP.md  SUMD.md  SUMR.json  SUMR.md  TODO.md  Taskfile.yml  analysis.toon  analysis.toon.yaml  app.doql.css  app.doql.less  calls.mmd  calls.yaml  compact_flow.mmd  context.md  evolution.toon.yaml  flow.mmd  goal.yaml  map.toon.yaml  planfile.yaml  project.sh  project.toon  project2.sh  prompt_sumd_sumr_feature.md  pyproject.toml  pyqual.yaml  redsl_refactor_report.md  redsl_refactor_report.toon.yaml  requirements.txt  setup.py  sumd.json  validate_toon.py
.github/workflows/: publish.yml
batch_1/: analysis.toon  analysis.toon.yaml
benchmarks/: benchmark_constants.py  benchmark_format_quality.py  benchmark_performance.py  format_evaluator.py  project_generator.py  reporting.py  test_performance.py
calls_output/: README.md  analysis.toon.yaml  calls.yaml  context.md  index.html
code2flow/: __init__.py  cli.py
code2flow/analysis/: __init__.py  data_analysis.py  pipeline_detector.py  smells.py
code2flow/core/: analyzer.py
code2flow/exporters/: __init__.py  base.py  context_exporter.py  json_exporter.py  llm_exporter.py  mermaid_exporter.py  toon.py  yaml_exporter.py
code2flow/nlp/: __init__.py
code2llm/: __init__.py  __main__.py  analysis.toon.yaml  cli.py  cli_analysis.py  cli_commands.py  cli_exports.py  cli_parser.py
code2llm/analysis/: __init__.py  (+11 more)
code2llm_part2/: analysis.toon.yaml
docs/: API.md  COMPARISON_AND_OPTIMIZATION.md  LLM_USAGE.md  METHODOLOGY.md  PROJECT_SUMMARY.md  README.md
examples/: functional_refactoring_example.py
output_all/: analysis.json  analysis.toon  analysis.yaml  compact_flow.mmd  context.md  flow.toon  map.toon
project/: README.md  analysis.toon  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  llm_prompt.md  map.toon  map.toon.yaml  map.yaml  mermaid.export  project.toon  project.toon.yaml  project.yaml  prompt.txt  refactor-prompt.txt  toon.yaml  validation.toon.yaml
project_calls_test/: README.md  calls.yaml  context.md  index.html
project_multi/: README.md  analysis.toon  context.md  project.toon  prompt.txt
project_single/: README.md  context.md  project.toon  prompt.txt
root/: analysis.toon  analysis.toon.yaml
scripts/: bump_version.py
test_calls_output/: README.md  analysis.toon.yaml  context.md  index.html
test_dynamic/: README.md  context.md
test_dynamic2/: README.md  context.md
test_metrics/: README.md  context.md
test_prompt/: README.md  context.md
test_python_only_examples_tests/: analysis.toon.yaml
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_advanced_analysis.py  test_analyzer.py  test_calls_toon_export.py  test_declarative_collection.py  test_deep_analysis.py  test_edge_cases.py  test_export_cache_flags.py  test_format_quality.py  test_multilanguage_e2e.py  test_nlp_pipeline.py  test_nonpython_cc_calls.py  test_orchestrator_cache_mtime.py  test_persistent_cache.py  test_project_toon_export.py  test_prompt_engine.py  test_prompt_txt.py  test_refactoring_engine.py  test_sprint3_pipelines.py  test_toon_v2.py
(+170 files in other folders)
